--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "firebase-admin": "^11.7.0",
     "helmet": "^6.1.5",
     "jsonwebtoken": "^9.0.0",
+    "mongodb": "^5.3.0",
     "mongoose": "^7.0.3",
     "multer": "1.4.5-lts.1",
     "uuid": "^9.0.0",
